# bwsl

./: .clang  .clang-tidy  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: cmake.yml
applications/: CMakeLists.txt  dumplattice.cpp  dumpmt.cpp
cmake/: BuildBWSL.cmake  BuildCatch.cmake  BuildPcgCpp.cmake  BuildSpdlog.cmake  BuildTests.cmake  BuildYamlCpp.cmake  FindCatch.cmake  FindMakePRG.cmake  FindYamlCpp.cmake  GetCompileFlags.cmake
config/: CMakeLists.txt  versiondef.h.in
include/bwsl/: Accumulator.hpp  Accumulators.hpp  Approx.hpp  Bravais.hpp  EnumString.hpp  Exceptions.hpp  FileUtils.hpp  HistAccumulator.hpp  HyperCubicGrid.hpp  KahanAccumulator.hpp  Lattice.hpp  LatticeFactory.hpp  LinSpace.hpp  LogSpace.hpp  MarkovChainStats.hpp  MathUtils.hpp  MonteCarloUtils.hpp  NeumaierAccumulator.hpp  ObservableGroup.hpp  Pairs.hpp  RNGUtils.hpp  RationalNum.hpp  RelationalUtils.hpp  SquareLattice.hpp  compile_flags.txt
include/bwsl/accumulators/: AccumulatorsExceptions.hpp  KahanAccumulator.hpp  KnuthWelfordAccumulator.hpp  NaiveIntegerAccumulator.hpp  NeumaierAccumulator.hpp  WestAccumulator.hpp
include/bwsl/mcutils/: MoveResult.hpp  MoveStats.hpp  MoveStatus.hpp
libs/: CMakeLists.txt
libs/catch2/: CMakeLists.txt
libs/cmake/: BuildCatch.cmake  BuildFMT.cmake
src/: Approx.hpp  Bravais.cpp  Lattice.cpp  Lattice.hpp  LatticeFactory.hpp  LinSpace.hpp  MathUtils.hpp  SquareLattice.hpp
templates/: template.cpp  template.hpp  template.test.cpp
test/: AccumulatorTest.cpp  BravaisTest.cpp  CMakeLists.txt  EnumString.cpp  HistAccumulatorTest.cpp  HyperCubicGridTest.cpp  KahanAccumulatorTest.cpp  LatticeTest.cpp  MarkovChainStatsTest.cpp  MoveStatsTest.cpp  NeumaierAccumulatorTest.cpp  PairsTest.cpp  RationalNumTest.cpp  compile_flags.txt
tests/: LatticeTest.cpp  PairsTest.cpp
